<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:layout_marginStart="@dimen/padding"
        android:layout_marginEnd="@dimen/padding">

    <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_text"
            android:textAlignment="center"
            style="@style/NameStyle"/>
    <EditText
            android:id="@+id/nickname_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textAlignment="center" android:hint="@string/what_is_your_name" style="@style/NameStyle"/>
    <Button
            android:id="@+id/done"
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_margin"
            android:fontFamily="@font/roboto"
            style="@style/Widget.AppCompat.Button.Colored"/>
    <TextView
            android:id="@+id/nickname_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textAlignment="center"
            style="@style/NameStyle"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:id="@+id/star_image" android:contentDescription="@string/yellow_star"
            android:layout_marginTop="@dimen/layout_margin"/>
    <ScrollView
            android:id="@+id/bio_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bio_text"
                android:lineSpacingMultiplier="@dimen/line_spacing"
                style="@style/NameStyle"/>
    </ScrollView>
</LinearLayout>